--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -14,6 +14,7 @@
 body {
      border: 1px dotted gray;
      padding: 20px;
+
 }
 
 .jumbotron {
@@ -32,3 +33,28 @@ body {
      position: absolute;
      z-index: -1;	
 }
+
+.project {
+    margin-left: 1px;
+    background-color: #C8F0FF;
+    padding: 50px;
+    width: 525px;
+}
+
+p {
+    font-variant: small-caps;
+
+}
+
+.project p {
+    font-variant: small-caps;
+
+}
+
+#project1 {
+    font-variant: small-caps;
+}
+
+
+
+
